overflow spinner fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ button {
   position: relative;
   width: 80px;
   height: 80px;
+  overflow: hidden;
 }
 
 .lds-ring div {
